# django-versionfield

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
test_project/test_project/: settings.py
versionfield/: __init__.py  forms.py  tests.py  utils.py  version.py
versionfield/tests/: __init__.py
