[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-versionfield2"
version = "0.6.0"
description = "A DB Independent Custom Django Field for storing Version numbers for fast indexing"
authors = [
    { name = "Antoine Nguyen", email = "tonio@ngyn.org" }
]
license = { text = "BSD" }
readme = ""
requires-python = ">=3.6"
dependencies = [
    "Django>=3.0.0",
    "six>=1.9.0"
]
urls = { "Homepage" = "https://github.com/termius/django-versionfield" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP"
]

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools.packages]
find = {namespaces = false}
